<resources>
    <string name="app_name">Status Vibe</string>
    <string name="dog_image">Dog Image</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="name">Name</string>
    <string name="continue_">Continue</string>
    <string name="monbile_number">Mobile Number</string>
    <string name="edit_design">Edit Design</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="capture_img">Capture image</string>
    <string name="from_gallery">From Gallery</string>
    <string name="download">Download</string>
    <string name="choose_category">Choose Category</string>
    <string name="create_status">Create Status</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="type_your_text_here">Type your text here</string>
    <string name="select_background">Select Background</string>
    <string name="share_status">Share Status</string>
    <string name="font">Font</string>
    <string name="add">Add</string>

    <string name="crop_image_activity_title">Crop</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="pick_image_intent_chooser_title">Select source</string>

    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>

    <string name="ic_rotate_left_24">Rotate counter clockwise</string>
    <string name="ic_rotate_right_24">Rotate</string>

    <string name="ic_flip_24">Flip</string>
    <string name="ic_flip_24_horizontally">Flip horizontally</string>
    <string name="ic_flip_24_vertically">Flip vertically</string>
    <string name="pick_image_chooser_title">Select source</string>
    <string name="pick_image_camera">Camera</string>
    <string name="pick_image_gallery">Gallery</string>
    <string name="rotation_value">Click to change rotation: %1$s</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="share_app">Share App</string>
</resources>