<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_8sdp"
        android:paddingVertical="@dimen/_8sdp">

        <TextView
            android:id="@+id/avatar_tv"
            style="@style/laila_semibold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/choose_avatar" />

        <TextView
            android:id="@+id/camera_tv"
            style="@style/laila_semibold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/capture_img" />

        <TextView
            android:id="@+id/gallery_tv"
            style="@style/laila_semibold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/from_gallery" />

    </LinearLayout>
</layout>