<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_iv"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_back_button" />

                <TextView
                    android:id="@+id/title_tv"
                    style="@style/activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/back_iv"
                    android:text="@string/create_status"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/save_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_11sdp"
                    android:background="@drawable/rect_unselected_bg"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:text="@string/finish"
                    android:textAllCaps="false"
                    android:textAppearance="@style/laila_medium_16"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/next_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_11sdp"
                    android:background="@drawable/rect_unselected_bg"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textAppearance="@style/laila_medium_16" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_toStartOf="@id/next_tv"
                    android:src="@drawable/ic_background_change" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar" />

    </RelativeLayout>

</layout>