<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_iv"
                    style="@style/laila_semibold_18"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_back_button" />


                <TextView
                    android:id="@+id/title_tv"
                    style="@style/activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/back_iv"
                    android:text="@string/profile_detail" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/profile_img_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_profile"
                app:civ_border_color="@color/gray_D3D3D3"
                app:civ_border_width="1dp" />

            <ImageView
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_below="@+id/profile_img"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dotted_circle"
                android:paddingHorizontal="@dimen/_4sdp"
                android:paddingVertical="@dimen/_2sdp"
                android:src="@drawable/ic_camera" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/name_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_img_container"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp">


            <EditText
                android:id="@+id/name_et"
                style="@style/laila_medium_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:autofillHints="@string/name"
                android:background="@drawable/rect_gray_border"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColorHint="@color/gray_AFB0B4" />


            <TextView
                style="@style/laila_semibold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/_2sdp"
                android:text="@string/name"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_number_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_rl"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/rect_gray_border"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <TextView
                    android:id="@+id/country_code_tv"
                    style="@style/laila_medium_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/phone_number_et"
                    style="@style/laila_medium_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:autofillHints="@string/monbile_number"
                    android:background="@null"
                    android:hint="@string/monbile_number"
                    android:inputType="number"
                    android:textColorHint="@color/gray_AFB0B4"
                    tools:ignore="TextFields" />
            </LinearLayout>


            <TextView
                style="@style/laila_semibold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/_2sdp"
                android:text="@string/monbile_number"
                android:textColor="@color/black" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/rect_btn_bg_purple"
            android:elevation="@dimen/_3sdp"
            android:fontFamily="@font/laila_semibold"
            android:paddingHorizontal="@dimen/_60sdp"
            android:paddingVertical="@dimen/_9sdp"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skip_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/continue_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:elevation="@dimen/_3sdp"
            android:fontFamily="@font/laila_semibold"
            android:paddingHorizontal="@dimen/_60sdp"
            android:paddingVertical="@dimen/_9sdp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />


    </RelativeLayout>
</layout>