<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_iv"
                    style="@style/laila_semibold_18"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_back_button" />


                <TextView
                    android:id="@+id/title_tv"
                    style="@style/activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/back_iv"
                    android:text="@string/edit_design" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_rl"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_f0f3f8"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/view_pager_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.krisu.statusmaker.ui.custom_component.WrapViewPager
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                        android:id="@+id/worm_dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"

                        android:layout_marginBottom="@dimen/_13sdp"
                        app:dotsColor="@color/gray_A9A9A9"
                        app:dotsCornerRadius="8dp"
                        app:dotsSize="10dp"
                        app:dotsSpacing="4dp"
                        app:dotsStrokeColor="@color/gray_A9A9A9"
                        app:dotsStrokeWidth="1dp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/name_rl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_20sdp">


                            <EditText
                                android:id="@+id/name_et"
                                style="@style/laila_medium_16"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:autofillHints="@string/name"
                                android:background="@drawable/rect_gray_border"
                                android:gravity="center_vertical"
                                android:hint="@string/name"
                                android:inputType="text"
                                android:paddingHorizontal="@dimen/_12sdp"
                                android:paddingVertical="@dimen/_10sdp"
                                android:textColorHint="@color/gray_AFB0B4" />


                            <TextView
                                style="@style/laila_semibold_12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:background="@color/white"
                                android:paddingHorizontal="@dimen/_2sdp"
                                android:text="@string/name"
                                android:textColor="@color/black" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/phone_number_rl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/name_rl"
                            android:layout_marginHorizontal="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_20sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:background="@drawable/rect_gray_border"
                                android:gravity="center_vertical"
                                android:paddingHorizontal="@dimen/_10sdp"
                                android:paddingVertical="@dimen/_10sdp">

                                <TextView
                                    android:id="@+id/country_code_tv"
                                    style="@style/laila_medium_16"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="+91"
                                    android:textColor="@color/black" />

                                <EditText
                                    android:id="@+id/phone_number_et"
                                    style="@style/laila_medium_16"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_5sdp"
                                    android:autofillHints="@string/monbile_number"
                                    android:background="@null"
                                    android:hint="@string/monbile_number"
                                    android:inputType="number"
                                    android:textColorHint="@color/gray_AFB0B4"
                                    tools:ignore="TextFields" />
                            </LinearLayout>


                            <TextView
                                style="@style/laila_semibold_12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:background="@color/white"
                                android:paddingHorizontal="@dimen/_2sdp"
                                android:text="@string/monbile_number"
                                android:textColor="@color/black" />
                        </RelativeLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/bottom_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_6sdp">


            <TextView
                android:id="@+id/download_tv"
                style="@style/laila_semibold_18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_gray_solid_30"
                android:gravity="center_horizontal"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/download"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/share_tv"
                style="@style/laila_semibold_18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/rect_green_solid_30"
                android:gravity="center_horizontal"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/share"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>
</layout>